# lerobot-mujoco

./: .gitignore  README.MD  pyproject.toml  requirements.txt
description/dual_arm/: scene.xml
lerobot_mujoco/bimanual/: data_collection.py  data_visualization.py  npz2lerobot.py  train.py
lerobot_mujoco/bimanual/dataset_out/: episode_0000.npz
lerobot_mujoco/bimanual/lerobot_data/20260222_210018/data/chunk-000/: file-000.parquet
lerobot_mujoco/bimanual/lerobot_data/20260222_210018/meta/: info.json  stats.json  tasks.parquet
lerobot_mujoco/bimanual/lerobot_data/20260222_210018/meta/episodes/chunk-000/: file-000.parquet
lerobot_mujoco/bimanual/lerobot_data/20260223_190623/data/chunk-000/: file-000.parquet
lerobot_mujoco/bimanual/lerobot_data/20260223_190623/meta/: info.json  stats.json
lerobot_mujoco/single_arm/: data_collection.py  data_visualization.py  npz2lerobot.py  train.py
lerobot_mujoco/single_arm/dataset_out/: episode_0000.npz  episode_0001.npz  episode_0002.npz
lerobot_real/hardware_config/piper/: piper_bus.py  piper_follower.py  piper_sdk_adapter.py
lerobot_real/single_arm/: data_collection.py  data_visualization.py
lerobot_real/single_arm/dataset_out/: episode_0000.npz
lerobot_robot_piper/: piper_bus.py  piper_config.py  piper_robot.py  piper_sdk_adapter.py  run_piper_follower.py
mink_ik/: bimanual_mink_ik.py  quest3_utils.py  single_arm_mink_ik.py
quest3/: quest3_input.py  quest3_preprocessor.py  quest3_server.py  quest3_teleop.py  test.py
(+1 files in other folders)
